--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         function fetchWeatherData(location) {
             const apiKey = "e3f5667eb4014a558b594723241203";
             // const url = ;
-            fetch(`http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}&aqi=no`)
+            fetch(`http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}`)
                 .then(function (response) {
                     return response.json();
                 })
