--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         function fetchWeatherData(location) {
             const apiKey = "e3f5667eb4014a558b594723241203";
             // const url = ;
-            fetch(`http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}`)
+            fetch(`https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}`)
                 .then(function (response) {
                     return response.json();
                 })
@@ -164,7 +164,7 @@
 
         function fetchWeatherDataByLocation(location) {
             const apiKey = "e3f5667eb4014a558b594723241203";
-            const url = `http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}&aqi=no`;
+            const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}&aqi=no`;
             fetch(url)
                 .then(function (response) {
                     return response.json();
@@ -195,7 +195,7 @@
             document.getElementById("lon").innerHTML = data['location']['lon'];
             document.getElementById("lat").innerHTML = data['location']['lat'];
 
-            document.getElementById("i").src = `http:${data['current']['condition']['icon']}`;
+            document.getElementById("i").src = `https:${data['current']['condition']['icon']}`;
 
            
             fetchForecast(data['location']['lat'], data['location']['lon']);
@@ -210,7 +210,7 @@
             const startDateString = formatDate(pastDate);
             const endDateString = formatDate(currentDate);
 
-            const url = `http://api.weatherapi.com/v1/history.json?key=${apiKey}&q=${latitude},${longitude}&dt=${startDateString}&end_dt=${endDateString}`;
+            const url = `https://api.weatherapi.com/v1/history.json?key=${apiKey}&q=${latitude},${longitude}&dt=${startDateString}&end_dt=${endDateString}`;
 
             fetch(url)
                 .then(response => response.json())
@@ -225,7 +225,7 @@
             forecastContainer.innerHTML = '';
 
             data.forecast.forecastday.forEach(day => {
-                const pastForecastCard = createPastForecastCard(day.date, day.day.avgtemp_c, day.day.condition.text, `http:${day.day.condition.icon}`);
+                const pastForecastCard = createPastForecastCard(day.date, day.day.avgtemp_c, day.day.condition.text, `https:${day.day.condition.icon}`);
                 forecastContainer.appendChild(pastForecastCard);
             });
         }
@@ -256,7 +256,7 @@
 
         function fetchForecast(latitude, longitude) {
             const apiKey = "e3f5667eb4014a558b594723241203";
-            fetch(`http://api.weatherapi.com/v1/forecast.json?key=${apiKey}&q=${latitude},${longitude}&days=4`)
+            fetch(`https://api.weatherapi.com/v1/forecast.json?key=${apiKey}&q=${latitude},${longitude}&days=4`)
                 .then(response => response.json())
                 .then(data => {
                     const forecastContainer = document.querySelector('.forecast-container');
@@ -264,7 +264,7 @@
                     forecastContainer.innerHTML = '';
 
                     data.forecast.forecastday.forEach(day => {
-                        createForecastCard(day.date, day.day.avgtemp_c, day.day.condition.text,`http:${day.day.condition.icon}`);
+                        createForecastCard(day.date, day.day.avgtemp_c, day.day.condition.text,`https:${day.day.condition.icon}`);
                     });
                 })
                 .catch(error => console.error("Error fetching forecast data:", error));
